--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 								</div>
 							</section>
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; Taylor Tschaikowski. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 					</div>
 
