--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-					  <video controls loop autobuffer muted playsinline>
+					  <!-- <video controls loop autobuffer muted playsinline>
 							<source src="https://lh3.googleusercontent.com/jrCHBtu5N_AlLm57jq5jfHKH-BicWSj2IDFXDCPhNmXpmkRqv5EvFeIZtIY0l9_f1TOBmL85CIbQ82eMNURxHluMNoXfRPsPgJfZomtEfZXm_Mv4uQV88nULV6MilLO6WC6t8EvVpsh_heZvTv_I3wR8yNE5f2EolEDt4i_vNBEzuYHTOnaHgK413M-9ikIQBhAm8ZHdwMHF3AscPWWSf3VGqAPBGLrqEav7z7byomOSfa0YR9Xsl2_illPWMkUmD1bvHnabWTe3hiFVFeIDzuHTwHt57EtpbAdmj0L-12Y5p_Nkh0ToiuhLvyN3_hwZWy8CNg-kJlG55LwJv4m1P_sjS1kI4W2pj-e8OMG-JjNoTmcC4rmFTmcB_QOfZ7vtoq1Nq1bW06H-qkriaZ-b0Ri3eK3_s2mP1Y5MtM8_X9gIdMX6uHNJQ-1q2RL68Vo_3DI068sqPyoeBlUgkjZk73eCYo_mEO0xeAUZqfO7AMAv7s9Z-UZkvS_9ykzcsNj_EUUzf6uXgWVsUDq-amMF8dhc-lMe1hUelrgXgrGktmu9R1mStbg7UHoppSKlzq9aZ_PkrNCJnYgPa5fdKObuEyG9u9PoMyAuf2mZAeRs01Os2jMwOy7rH1bpzrW1Qez7xH7-Nta9lNFdrbQcvYKuM44IatZYuC4w58wiqmej8gHCsd37zCrvzA=m18?cpn=gLe6PMBdafwEZYV1&c=WEB_EMBEDDED_PLAYER&cver=20190918.mp4" type="video/mp4">
 							'This video is not supported by your browser bitch!'
-				   </video>
-<!-- 
-				   <img class='introgif' src='https://lh3.googleusercontent.com/dGcBObEcpxWfDbFXf8k4tfaj54kShdS24MTLeoOogW-AlyTfwMMGOmzxvvaYSyiYjjs8pnFFPHMZ77_vNGbXrLg002WgtMxkzTdU-eTWY3vnm-5MsrxHfLJZ1NrWfFrUSKaTq8zgrBj7tO4xrvrnwkamfvL--xAeKi-umg9yH1yuEMauN8kGurvHDaj3bSCRrzDUp3LZx5JN79wf5s3G7Cecw-lrg_GDPZ3uNadsFBfEd8w4FR4KNAEofZ-iwe1aVHhqGdDG1NUk2jk73vUUcoaMXK6gnnMM8zoybC_51XwRd7gIIyTae7MejjPj3mOVb1pe5ZpZtRqLCH5ytVDqytZ7ohiBxuF0bQec0Rb8r9SJg-tbnEKulIJNql_2Zn3-LSa7k3mBLICGI42vvWFWdcGprs2l-26GoslKJtWgZ11-NeORJ-M1baMpE65kK9Np8Xm0QVmqAyTOkIJWNjbPJax5LDD7Jt5NNWtHACdKcLQ5QZY2wlLjgh2ELsPKyuApbBGYIeuYm9zxQ7PhqyOQy-7nvgRWIutzxGh0wSQ-gxrM1Ceq21LP-H-bIH8A45TrLmPeXXN1YQIUx5Qajk9-4Q5pMwtGLyihopzSFvBgPdNr9SXxdVEnW26MINP3DFamKhHLkWhSGWNt_o7FjBj0Bg3T1dUSu8ihj79NgeorHh-7n26nCe_taA=s217-no'
-				   		alt='Mighty Mouse Boxing' /> -->
+				   </video> -->
+				<img class='introgif' src='https://lh3.googleusercontent.com/dGcBObEcpxWfDbFXf8k4tfaj54kShdS24MTLeoOogW-AlyTfwMMGOmzxvvaYSyiYjjs8pnFFPHMZ77_vNGbXrLg002WgtMxkzTdU-eTWY3vnm-5MsrxHfLJZ1NrWfFrUSKaTq8zgrBj7tO4xrvrnwkamfvL--xAeKi-umg9yH1yuEMauN8kGurvHDaj3bSCRrzDUp3LZx5JN79wf5s3G7Cecw-lrg_GDPZ3uNadsFBfEd8w4FR4KNAEofZ-iwe1aVHhqGdDG1NUk2jk73vUUcoaMXK6gnnMM8zoybC_51XwRd7gIIyTae7MejjPj3mOVb1pe5ZpZtRqLCH5ytVDqytZ7ohiBxuF0bQec0Rb8r9SJg-tbnEKulIJNql_2Zn3-LSa7k3mBLICGI42vvWFWdcGprs2l-26GoslKJtWgZ11-NeORJ-M1baMpE65kK9Np8Xm0QVmqAyTOkIJWNjbPJax5LDD7Jt5NNWtHACdKcLQ5QZY2wlLjgh2ELsPKyuApbBGYIeuYm9zxQ7PhqyOQy-7nvgRWIutzxGh0wSQ-gxrM1Ceq21LP-H-bIH8A45TrLmPeXXN1YQIUx5Qajk9-4Q5pMwtGLyihopzSFvBgPdNr9SXxdVEnW26MINP3DFamKhHLkWhSGWNt_o7FjBj0Bg3T1dUSu8ihj79NgeorHh-7n26nCe_taA=s217-no'
+				   		alt='Mighty Mouse Boxing' /> 
 
 							</section>
 
