--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-					  <video controls loop autobuffer muted >
-							<source src="./videos/introHeavybag.mp4" type="video/mp4">
-							'This video is not supported by your browser bitch!'
-				   </video>
+									<video autoplay muted loop>
+										<source src='./videos/introHeavybag.mp4' alt='Mighty Mouse Fitness' type='video/mp4'>
+									</video>
 				<!-- <img class='introgif' src='https://lh3.googleusercontent.com/dGcBObEcpxWfDbFXf8k4tfaj54kShdS24MTLeoOogW-AlyTfwMMGOmzxvvaYSyiYjjs8pnFFPHMZ77_vNGbXrLg002WgtMxkzTdU-eTWY3vnm-5MsrxHfLJZ1NrWfFrUSKaTq8zgrBj7tO4xrvrnwkamfvL--xAeKi-umg9yH1yuEMauN8kGurvHDaj3bSCRrzDUp3LZx5JN79wf5s3G7Cecw-lrg_GDPZ3uNadsFBfEd8w4FR4KNAEofZ-iwe1aVHhqGdDG1NUk2jk73vUUcoaMXK6gnnMM8zoybC_51XwRd7gIIyTae7MejjPj3mOVb1pe5ZpZtRqLCH5ytVDqytZ7ohiBxuF0bQec0Rb8r9SJg-tbnEKulIJNql_2Zn3-LSa7k3mBLICGI42vvWFWdcGprs2l-26GoslKJtWgZ11-NeORJ-M1baMpE65kK9Np8Xm0QVmqAyTOkIJWNjbPJax5LDD7Jt5NNWtHACdKcLQ5QZY2wlLjgh2ELsPKyuApbBGYIeuYm9zxQ7PhqyOQy-7nvgRWIutzxGh0wSQ-gxrM1Ceq21LP-H-bIH8A45TrLmPeXXN1YQIUx5Qajk9-4Q5pMwtGLyihopzSFvBgPdNr9SXxdVEnW26MINP3DFamKhHLkWhSGWNt_o7FjBj0Bg3T1dUSu8ihj79NgeorHh-7n26nCe_taA=s217-no'
-				   		alt='Mighty Mouse Boxing' /> 
+				   		alt='Mighty Mouse Boxing' />  -->
 
-							</section> -->
+							</section>
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
