changed unset to cover on spotlight image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								</div>
 								
 								<div class="image filtered tinted" data-position="top left">
-									<img src="./images/runner-sun.jpeg" alt="" />
+									<img src="./images/runner-sun.jpeg" alt="Runner" />
 								</div>
 
 							</section>
