added text to replace lorem ipsum

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Taylor</h1>
-									<p>I've been studying the  <strong>Body</strong> for over 7 years now. My goal is to guide those who seek results. I specialize in nutrition, boxing, and overall wellness.   </p>
+									<p>I've been studying the  <strong>Body</strong> for over 7 years now. My goal is to guide those who seek results. I specialize in nutrition, boxing, and overall wellness. I've been studying the  <strong>Body</strong> for over 7 years now. My goal is to guide those who seek results. I specialize in nutrition, boxing, and overall wellness.   </p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -42,7 +42,7 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Why Did I Become A Trainer?</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<p>So I can get little punks like you into the best shape of your life. You will piss excellence by the time I am finished. I was voted <strong>"Best Trainer of All Time"</strong> by everyone...every time. So I can get little punks like you into the best shape of your life. You will piss excellence by the time I am finished. I was voted <strong>"Best Trainer of All Time"</strong> by everyone...every time.</p>
 								</div>
 								
 								<div class="image filtered tinted" data-position="top left">
@@ -55,7 +55,7 @@
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">My Certifications</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>First off, I'm a certified grade A badass mofo. Second, I'm also a black belt in WilBeatYu. Third, I'm a slick sharpshooter, handy with the piece. First off, I'm a certified grade A badass mofo. Second, I'm also a black belt in WilBeatYu. Third, I'm a slick sharpshooter, handy with the piece.</p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
@@ -73,7 +73,7 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Did You Know?</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>If your fat your more 40% more likely to die. And also 100% more likely to need my help. Send me a message below. If your fat your more 40% more likely to die. And also 100% more likely to need my help. Send me a message below. If your fat your more 40% more likely to die. And also 100% more likely to need my help. Send me a message below. </p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
@@ -96,7 +96,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>If you have tried many diets/workouts and your still not seeing results, give me a call. I am an expert and will garauntee your success or your money back.</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
