--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload">
 
 		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+			<div id="page-wrapper" style="background-color:black">
 
 				<!-- Wrapper -->
 					<div id="wrapper">
