added 2nd padwork video

--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
 								</div>
 							</section>
 
+							<section class="padwork">
+									<div class="panel banner right">
+											<video autoplay muted loop>
+													<source src='./videos/padWork.mp4' alt='Mighty Mouse Fitness' type='video/mp4'>
+												</video>
+										</div>
+							</section>
+
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
